@@ -41,7 +41,7 @@ connection_name_changed (GtkEditable *editable, gpointer user_data)
 	NMSettingConnection *s_connection;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_connection = (NMSettingConnection *) nm_connection_get_setting (editor->connection, "connection");
+	s_connection = (NMSettingConnection *) nm_connection_get_setting (editor->connection, NM_SETTING_CONNECTION);
 	if (s_connection) {
 		if (s_connection->name)
 			g_free (s_connection->name);
@@ -55,7 +55,7 @@ connection_autoconnect_changed (GtkToggleButton *button, gpointer user_data)
 	NMSettingConnection *s_connection;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_connection = (NMSettingConnection *) nm_connection_get_setting (editor->connection, "connection");
+	s_connection = (NMSettingConnection *) nm_connection_get_setting (editor->connection, NM_SETTING_CONNECTION);
 	if (s_connection)
 		s_connection->autoconnect = gtk_toggle_button_get_active (button);
 }
@@ -66,7 +66,7 @@ ethernet_port_changed (GtkComboBox *combo, gpointer user_data)
 	NMSettingWired *s_wired;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, "802-3-ethernet");
+	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRED);
 	if (s_wired) {
 		if (s_wired->port)
 			g_free (s_wired->port);
@@ -86,7 +86,7 @@ ethernet_speed_changed (GtkSpinButton *button, gpointer user_data)
 	NMSettingWired *s_wired;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, "802-3-ethernet");
+	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRED);
 	if (s_wired)
 		s_wired->speed = gtk_spin_button_get_value_as_int (button);
 }
@@ -97,7 +97,7 @@ ethernet_duplex_changed (GtkToggleButton *button, gpointer user_data)
 	NMSettingWired *s_wired;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, "802-3-ethernet");
+	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRED);
 	if (s_wired) {
 		if (s_wired->duplex)
 			g_free (s_wired->duplex);
@@ -115,7 +115,7 @@ ethernet_autonegotiate_changed (GtkToggleButton *button, gpointer user_data)
 	NMSettingWired *s_wired;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, "802-3-ethernet");
+	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRED);
 	if (s_wired)
 		s_wired->auto_negotiate = gtk_toggle_button_get_active (button);
 }
@@ -126,7 +126,7 @@ ethernet_mtu_changed (GtkSpinButton *button, gpointer user_data)
 	NMSettingWired *s_wired;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, "802-3-ethernet");
+	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRED);
 	if (s_wired)
 		s_wired->mtu = gtk_spin_button_get_value_as_int (button);
 }
@@ -137,7 +137,7 @@ wireless_mode_changed (GtkComboBox *combo, gpointer user_data)
 	NMSettingWireless *s_wireless;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, "802-11-wireless");
+	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRELESS);
 	if (s_wireless) {
 		if (s_wireless->mode)
 			g_free (s_wireless->mode);
@@ -155,7 +155,7 @@ wireless_band_changed (GtkComboBox *combo, gpointer user_data)
 	NMSettingWireless *s_wireless;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, "802-11-wireless");
+	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRELESS);
 	if (s_wireless) {
 		if (s_wireless->band)
 			g_free (s_wireless->band);
@@ -173,7 +173,7 @@ wireless_channel_changed (GtkSpinButton *button, gpointer user_data)
 	NMSettingWireless *s_wireless;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, "802-11-wireless");
+	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRELESS);
 	if (s_wireless)
 		s_wireless->channel = gtk_spin_button_get_value_as_int (button);
 }
@@ -184,7 +184,7 @@ wireless_rate_changed (GtkSpinButton *button, gpointer user_data)
 	NMSettingWireless *s_wireless;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, "802-11-wireless");
+	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRELESS);
 	if (s_wireless)
 		s_wireless->rate = gtk_spin_button_get_value_as_int (button);
 }
@@ -195,7 +195,7 @@ wireless_tx_power_changed (GtkSpinButton *button, gpointer user_data)
 	NMSettingWireless *s_wireless;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, "802-11-wireless");
+	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRELESS);
 	if (s_wireless)
 		s_wireless->tx_power = gtk_spin_button_get_value_as_int (button);
 }
@@ -206,7 +206,7 @@ wireless_mtu_changed (GtkSpinButton *button, gpointer user_data)
 	NMSettingWireless *s_wireless;
 	NMConnectionEditor *editor = (NMConnectionEditor *) user_data;
 
-	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, "802-11-wireless");
+	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRELESS);
 	if (s_wireless)
 		s_wireless->mtu = gtk_spin_button_get_value_as_int (button);
 }
@@ -322,7 +322,7 @@ fill_connection_values (NMConnectionEditor *editor)
 {
 	NMSettingConnection *s_connection;
 
-	s_connection = (NMSettingConnection *) nm_connection_get_setting (editor->connection, "connection");
+	s_connection = (NMSettingConnection *) nm_connection_get_setting (editor->connection, NM_SETTING_CONNECTION);
 	if (s_connection) {
 		gtk_entry_set_text (GTK_ENTRY (editor->connection_name), s_connection->name);
 		gtk_toggle_button_set_active (GTK_TOGGLE_BUTTON (editor->connection_autoconnect), s_connection->autoconnect);
@@ -337,7 +337,7 @@ fill_ethernet_values (NMConnectionEditor *editor)
 {
 	NMSettingWired *s_wired;
 
-	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, "802-3-ethernet");
+	s_wired = (NMSettingWired *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRED);
 	if (s_wired) {
 		if (!strcmp (s_wired->port, "tp"))
 			gtk_combo_box_set_active (GTK_COMBO_BOX (editor->ethernet_port), 0);
@@ -375,7 +375,7 @@ fill_wireless_values (NMConnectionEditor *editor)
 {
 	NMSettingWireless *s_wireless;
 
-	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, "802-11-wireless");
+	s_wireless = (NMSettingWireless *) nm_connection_get_setting (editor->connection, NM_SETTING_WIRELESS);
 	if (s_wireless) {
 		/* FIXME: SSID */
 
@@ -417,7 +417,7 @@ fill_ip4_values (NMConnectionEditor *editor)
 {
 	NMSettingIP4Config *s_ip4;
 
-	s_ip4 = (NMSettingIP4Config *) nm_connection_get_setting (editor->connection, "ipv4");
+	s_ip4 = (NMSettingIP4Config *) nm_connection_get_setting (editor->connection, NM_SETTING_IP4_CONFIG);
 	if (s_ip4) {
 	} else {
 	}
