@@ -1,5 +1,7 @@
 2007-09-20  Tambet Ingo  <tambet@gmail.com>
 
+	* src/connection-editor/nm-connection-editor.c: Use defined setting names.
+
 	* src/connection-editor/nm-connection-list.c (nm_connection_list_finalize):
 	Don't leak GConfClient.
 	(load_connections): No need to use weak references, just use 
